Fix CORS and actually put in authorize attribute, and put get login working on frontend.

--- a/Strava.Data.Ui/strava-data-ui/src/app/app.component.html
+++ b/Strava.Data.Ui/strava-data-ui/src/app/app.component.html
@@ -1,5 +1,6 @@
-
+<title>{title}</title>
 <div class="main">
+  <button *ngIf="isLoggedIn()" class="btn btn-primary" (click)="logout()">Logout</button>
 
   <router-outlet></router-outlet>
 
