--- a/Strava.Data.Ui/strava-data-ui/src/app/dashboard/dashboard.component.html
+++ b/Strava.Data.Ui/strava-data-ui/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<h2>Dashboard</h2>
+<div class="map-container">
+    <div class="map-frame">
+        <div id="map"></div>
+    </div>
+</div>
