--- a/Strava.Data.Ui/strava-data-ui/src/app/dashboard/dashboard.component.scss
+++ b/Strava.Data.Ui/strava-data-ui/src/app/dashboard/dashboard.component.scss
@@ -9,8 +9,8 @@
   
 .map-frame {
     border: 2px solid black;
-    height: 35rem;
-    width: 60rem;
+    height: 40rem;
+    width: calc(100% - 5rem);
     margin: 0 auto;
 
 
