--- a/Strava.Data.Ui/strava-data-ui/src/app/dashboard/dashboard.component.scss
+++ b/Strava.Data.Ui/strava-data-ui/src/app/dashboard/dashboard.component.scss
@@ -12,10 +12,13 @@
     height: 40rem;
     width: calc(100% - 5rem);
     margin: 0 auto;
-
-
 }
   
 #map {
     height: 100%;   
+}
+
+.run-row:hover {
+    cursor: pointer;
+    background-color: lightgray;
 }
