--- a/Strava.Data.Ui/strava-data-ui/src/app/dashboard/dashboard.component.scss
+++ b/Strava.Data.Ui/strava-data-ui/src/app/dashboard/dashboard.component.scss
@@ -22,3 +22,47 @@
     cursor: pointer;
     background-color: lightgray;
 }
+
+#loadAll {
+    margin: 1rem 0 1rem 0;
+}
+
+.selected {
+    background: lightgreen;
+}
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin-bottom: 0.2rem;
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 16px;
+    height: 16px;
+    margin: 2px;
+    border-radius: 50%;
+    border: 1px solid #000;
+    border-color: #000 transparent #000 transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.spinner {
+    opacity: 0;
+}
+
+.loading {
+    opacity: 1;
+}
+
